--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Lewis & Daniella",
   "short_name": "Friendship App",
-  "start_url": "index.html",
+  "start_url": "./index.html",
   "display": "standalone",
   "background_color": "#f3e8ff",
   "theme_color": "#9c6aff",
